# shoestore

./: LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml
api/: serializer.py  urls.py  views.py
api/management/commands/: handle_data.py
shoeapp/: forms.py  models.py  urls.py  views.py
shoeapp/migrations/: 0001_initial.py
shoeapp/templates/: manufacturer_details.html  manufacturer_form.html  shoe_details.html  shoe_form.html
shoeproject/: asgi.py  settings.py  urls.py  wsgi.py
